# test2-for-helennubit-team

./: .gitignore  Inference技术时序图.md  README.md  USAGE.md  ci-test.txt  index.html  pet-adoption.html  pet-booking.html  pet-feeding-miniapp-requirements.md  pet-feeding-miniapp-tech-solution.md  pet-feeding-promo.html  pyproject.toml  test_baidu_api.py  使用手册.md  开发规则手册.md  测试须知.md
.github/workflows/: ci.yml
config/: .env.example  __init__.py  config.example.json  config.example.yaml  loaders.py  manager.py  secrets.py
core/: __init__.py  http_client.py  models.py
pet-feeding-app/: README.md
pet-feeding-app/miniapp/sitter-app/: app.js  app.json  project.config.json
pet-feeding-app/miniapp/sitter-app/pages/apply/: index.js  index.json  index.wxml  index.wxss
pet-feeding-app/miniapp/sitter-app/pages/income/: index.js  index.json  index.wxml  index.wxss
pet-feeding-app/miniapp/sitter-app/pages/index/: index.js  index.wxml  index.wxss
pet-feeding-app/miniapp/sitter-app/utils/: request.js
pet-feeding-app/miniapp/user-app/: app.js  app.json  project.config.json
pet-feeding-app/miniapp/user-app/utils/: request.js
pet-feeding-app/server/: package.json
pet-feeding-app/server/prisma/: schema.prisma
pet-feeding-app/server/src/: app.module.ts  main.ts
pet-feeding-app/server/src/filters/: global-exception.filter.ts
pet-feeding-app/server/src/guards/: jwt-auth.guard.ts
pet-feeding-app/server/src/interceptors/: response.interceptor.ts
tests/: test_async_http_client.py  test_config.py  test_http_client.py  test_models.py
(+44 files in other folders)
