[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-test-framework"
version = "0.1.0"
description = "Python API 自动化测试框架"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "flake8>=6.0",
    "black>=23.0",
]

[tool.setuptools.packages.find]
include = ["core*", "config*", "utils*", "plugins*", "reports*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
